Bug 313990: Firefox crashes on startup if bookmarkbackups/ is unreadable, r=mano